--- a/NuGet/Package.nuspec
+++ b/NuGet/Package.nuspec
@@ -16,6 +16,6 @@
   </metadata>
    <files>
      <!-- PCL -->
-     <file src="..\Sources\Spritesheet\bin\Release\Spritesheet.dll" target="lib\portable-net45+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Spritesheet.dll" />
+     <file src="..\Sources\Spritesheet\bin\Release\Spritesheet.dll" target="lib\portable-net45+win8+wpa81+monoandroid+monotouch+xamarinios+monomac+xamarinmac\Spritesheet.dll" />
    </files>
 </package>
