Chang class name and remove did not use code
- Change class name Spritesheet to SpriteSheet
because class name and namespace with same name
- Remove this.
- Remove did not use namespace

--- a/Sources/Spritesheet/Spritesheet.csproj
+++ b/Sources/Spritesheet/Spritesheet.csproj
@@ -31,24 +31,21 @@
     <Compile Include="Animation.cs" />
     <Compile Include="Base\Repeat.cs" />
     <Compile Include="Extensions\SpriteBatchExtensions.cs" />
-    <Compile Include="Spritesheet.cs" />
+    <Compile Include="SpriteSheet.cs" />
     <Compile Include="AnimationDefinition.cs" />
     <Compile Include="Frame.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
-      <HintPath>..\packages\MonoGame.Framework.Portable.3.6.0.1625\lib\portable-net45+win8+wpa81\MonoGame.Framework.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
-    <Reference Include="System.ValueTuple">
-      <HintPath>..\packages\System.ValueTuple.4.3.1\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Base\" />
-    <Folder Include="Extensions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
